--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,7 @@ jobs:
         run: echo "::set-output name=tag::${GITHUB_REF#refs/tags/}"
 
       - name: Zip artifact
-        uses: papeloto/action-zip@v1
+        uses: vimtor/action-zip@v1
         with:
           files: target/scala-2.12/igluctl
           dest: target/scala-2.12/igluctl_${{ steps.ver.outputs.tag }}.zip
